# swt

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  README_ZH.md
.github/workflows/: release.yml
src/: main.rs  utils.rs
src/providers/: claude.rs  codex.rs  mod.rs  opencode.rs
